<resources>
    <string name="app_name">RiseTek</string>
    <string name="scr_btn_login">Login</string>
    <string name="scr_btn_add_timing_record">Add Timing Record</string>
    <string name="scr_btn_preview">Preview</string>
    <string name="scr_lbl_address">Address</string>
    <string name="scr_lbl_address_colon">Address:</string>
    <string name="scr_btn_print">Print</string>
    <string name="scr_btn_issue_wo_print">Issue w/o Print</string>
    <string name="scr_btn_check_ticket">Check Ticket</string>
    <string name="scr_btn_rescind">Rescind</string>
    <string name="scr_btn_submit">Submit</string>
    <string name="scr_btn_dashboard">Dashboard</string>
    <string name="scr_btn_void_and_reissue">Void/Reissue</string>
    <string name="scr_btn_reissue">Reissue</string>
    <string name="scr_lbl_login_details">Login Details</string>
    <string name="scr_lbl_lpr_image">LPR Image</string>
    <string name="scr_lbl_image">Images</string>
    <string name="msg_add_note">Please add your note.</string>
    <string name="scr_lbl_officer_details">Officer Details</string>
    <string name="scr_lbl_parking_citation">Parking Citation</string>
    <string name="scr_lbl_printing">Printing</string>
    <string name="scr_lbl_voilation_details">Violation Details</string>
    <string name="scr_lbl_motorist_details">Motorist Details</string>
    <string name="scr_lbl_activity_log">Activity log</string>
    <string name="scr_lbl_route_details">Route Details</string>
    <string name="scr_lbl_voilation_type">Violation Type</string>
    <string name="scr_lbl_count">Count</string>
    <string name="scr_lbl_lpr_enforcement">Enforcement</string>
    <string name="scr_lbl_lpr_reverse_geo">Address</string>
    <string name="msg_ticket_posted">Ticket Posted\nSuccessfully</string>
    <string name="msg_municipal_ticket_posted">Municipal Ticket Posted\nSuccessfully</string>
    <string name="scr_lbl_citation">Citation</string>
    <string name="scr_lbl_record_type">Record type</string>
    <string name="scr_lbl_timing_type">Timing type</string>
    <string name="scr_lbl_arrival_status">Arrival status</string>
    <string name="msg_new_citation_added">New citation number range added</string>
    <string name="scr_lbl_citation_number">Citation Number</string>
    <string name="scr_lbl_officer_name">Officer Name</string>
    <string name="scr_lbl_officer">Officer</string>
    <string name="scr_lbl_tire_pressure">Tire Pressure</string>
    <string name="scr_lbl_assigned_bike">Assigned Bike</string>
    <string name="scr_lbl_breaks_rotors">Breaks Rotors</string>
    <string name="scr_lbl_lights_and_reflectors">Lights And Reflectors</string>
    <string name="scr_lbl_chain_crank">Chain Crank</string>
    <string name="scr_lbl_battery_free_of_debris">Battery Free Of Debris</string>
    <string name="scr_lbl_flat_pack">Flat Pack</string>
    <string name="scr_lbl_officer_name_summary">Officer Name</string>
    <string name="scr_lbl_internal_note">Internal note</string>
    <string name="scr_lbl_location_details">Location Details</string>
    <string name="scr_lbl_violation_details">Violation Details</string>
    <string name="scr_lbl_citation_details">Citation Details</string>
    <string name="scr_lbl_timing_images">Timing Images</string>
    <string name="scr_lbl_agency">Agency</string>
    <string name="scr_lbl_value">Value</string>
    <string name="scr_lbl_vehicle_details">Vehicle Details</string>
    <string name="scr_lbl_vehicle">Vehicle</string>
    <string name="scr_lbl_starting_mileage">Starting Mileage</string>
    <string name="scr_lbl_gas_level">Gas Level</string>
    <string name="scr_lbl_light_bar">Light Bar</string>
    <string name="scr_lbl_dashboard_indications">Dashboard Indications</string>
    <string name="scr_lbl_seat_belt_operational">Seat Belt Operational</string>
    <string name="scr_lbl_brakes">Brakes</string>
    <string name="scr_lbl_brake_lights">Brake Lights</string>
    <string name="scr_lbl_head_lights">Head Lights</string>
    <string name="scr_lbl_turn_signals">Turn Signals</string>
    <string name="scr_lbl_steering_wheel_operational">Steering Wheel Operational</string>
    <string name="scr_lbl_windshield_visibility">Windshield Visibility</string>
    <string name="scr_lbl_side_and_rear_view_mirrors_operational">Side And Rear View Mirrors Operational</string>
    <string name="scr_lbl_windshield_wipers_operational">Windshield Wipers Operational</string>
    <string name="scr_lbl_vehicle_registration_and_insurance">Vehicle Registration And Insurance</string>
    <string name="scr_lbl_cones_six_per_vehicle">Cones Six Per Vehicle</string>
    <string name="scr_lbl_first_aid_kit">First Aid Kit</string>
    <string name="scr_lbl_helmet_visual_inspection">Helmet Visual Inspection</string>
    <string name="scr_lbl_bike_glassess">Bike Glasses</string>
    <string name="scr_lbl_battery_charge">Battery Charge</string>
    <string name="scr_lbl_glove_visual_inspection">Glove Visual Inspection</string>
    <string name="scr_lbl_horn">Horn</string>
    <string name="scr_lbl_interior_cleanliness">Interior Cleanliness</string>
    <string name="scr_lbl_exterior_cleanliness">Exterior Cleanliness</string>
    <string name="scr_lbl_lpr_lens_free_of_debris">Lpr Lens Free Of Debris</string>
    <string name="scr_lbl_visible_leaks">Visible Leaks</string>
    <string name="scr_lbl_tires_visual_inspection">Tires Visual Inspection</string>
    <string name="scr_lbl_ticket_details">Ticket Details</string>
    <string name="scr_lbl_other_details">Other Details</string>
    <string name="scr_lbl_lot">Lot</string>
    <string name="scr_lbl_station">Station</string>
    <string name="scr_lbl_lot_la_metro">Lot</string>
    <string name="scr_lbl_vehicle_stored_at">Vehicle Stored At</string>
    <string name="scr_lbl_asset_details">Asset Details</string>
    <string name="scr_lbl_forgot_password">Forgot Password?</string>
    <string name="val_msg_please_enter_email">Please enter email or username.</string>
    <string name="val_msg_please_enter_officer_name">Please enter Officer Name.</string>
    <string name="val_msg_please_enter_shift">Please enter Shift.</string>
    <string name="val_msg_please_enter_meter_name">Please enter [] Name.</string>
    <string name="val_msg_please_enter_badge_id">Please enter Badge ID.</string>
    <string name="val_msg_please_enter_supervisor">Please enter Supervisor.</string>
    <string name="val_msg_please_enter_device_id">Please enter Device id.</string>
    <string name="val_msg_please_enter_beat">Please enter Beat.</string>
    <string name="val_msg_please_enter_body_style">Please enter Body style.</string>
    <string name="val_msg_please_enter_squad">Please enter Squad.</string>
    <string name="val_msg_please_enter_agency">Please enter Agency.</string>
    <string name="val_msg_please_enter_make">Please enter Make.</string>
    <string name="val_msg_please_enter_lot">Please enter Lot.</string>
    <string name="val_msg_please_enter_model">Please enter Model.</string>
    <string name="val_msg_please_enter_expiry_date">Please enter Expiry date.</string>
    <string name="val_msg_please_enter_valid_expiry_date">Please enter valid Expiry date.</string>
    <string name="val_msg_please_enter_side">Please enter Side.</string>
    <string name="val_msg_please_enter_color">Please enter Color.</string>
    <string name="val_msg_please_enter_comments">Please enter Comments.</string>
    <string name="val_msg_please_enter_lpr_number">Please enter Lpr Number.</string>
    <string name="val_msg_please_enter_state">Please enter State.</string>
    <string name="val_msg_please_enter_space">Please enter Space.</string>
    <string name="val_msg_please_enter_vin_number">Please enter Vin Number.</string>
    <string name="val_msg_please_enter_vin_number_min">Vin number is minimum length is [].</string>
    <string name="val_msg_vin_number_IOQ_Validation">Vin field not accept I,O and Q.</string>
    <string name="val_msg_please_enter_lpr_number_or_vin_number">Please enter Lpr Number or Vin Number</string>
    <string name="val_msg_please_enter_street">Please enter Street.</string>
    <string name="val_msg_please_enter_block">Please enter Block.</string>
    <string name="val_msg_please_enter_code">Please enter Code.</string>
    <string name="val_msg_please_enter_abbr_code">Please enter Violation abbrevation.</string>
    <string name="val_msg_please_enter_activity">Please enter Activity.</string>
    <string name="val_msg_please_enter_time_limit">Please enter Time Limit.</string>
    <string name="val_msg_please_enter_tier_stem_left">Please enter Tier stem left.</string>
    <string name="val_msg_please_enter_tier_stem_right">Please enter Tier stem right.</string>
    <string name="val_msg_please_enter_description">Please enter Description.</string>
    <string name="val_msg_please_enter_vio_type">Please enter vio type.</string>
    <string name="val_msg_please_enter_decal_year">Please enter Decal year.</string>
    <string name="val_msg_please_enter_direction">Please enter Direction.</string>
    <string name="val_msg_please_enter_decal_num">Please enter Decal number.</string>
    <string name="val_msg_please_enter_fine">Please enter Fine.</string>
    <string name="val_msg_please_enter_zone">Please enter Zone.</string>
    <string name="val_msg_please_enter_radio">Please enter Radio.</string>
    <string name="val_msg_please_enter_late_fine">Please enter Late Fine.</string>
    <string name="val_msg_please_enter_due_15_days">Please enter Due 15 days.</string>
    <string name="val_msg_please_enter_due_30_days">Please enter Due 30 days.</string>
    <string name="val_msg_please_enter_due_45_days">Please enter Due 45 days.</string>
    <string name="val_msg_please_enter_remark1">Please enter Remark1.</string>
    <string name="val_msg_please_enter_remark_max_limit">Remark : Max Char Limit Exceeded.</string>
    <string name="val_msg_please_enter_ticket_pending">Ticket Upload\nPending.</string>
    <string name="val_msg_please_enter_municipal_citation_ticket_pending">Municipal Ticket Upload\nPending.</string>
    <string name="val_msg_please_enter_remark2">Please enter Remark2.</string>
    <string name="val_msg_please_enter_note1">Please enter Note1.</string>
    <string name="val_msg_please_enter_note">Please enter Note.</string>
    <string name="val_msg_please_enter_status">Please enter Status.</string>
    <string name="val_msg_please_enter_reason">Please enter Reason.</string>
    <string name="val_msg_please_enter_cancel">Please enter Cancel.</string>
    <string name="val_msg_please_enter_rescind">Please enter Rescind.</string>
    <string name="val_msg_please_enter_note2">Please enter Note2.</string>
    <string name="val_msg_please_enter_note3">Please enter Note3.</string>
    <string name="scr_btn_cancel">Cancel</string>
    <string name="scr_btn_permit">Permit</string>
    <string name="scr_lbl_logout">Logout</string>
    <string name="scr_lbl_beat">Beat</string>
    <string name="scr_lbl_squad">Squad</string>
    <string name="scr_lbl_time">Time</string>
    <string name="scr_lbl_scofflaw">Scofflaw</string>
    <string name="scr_lbl_printer">Printer</string>
    <string name="scr_lbl_start_enforcement">Start</string>
    <string name="scr_lbl_device">Device</string>
    <string name="scr_lbl_break_1">Break 1</string>
    <string name="scr_lbl_break_2">Break 2</string>
    <string name="scr_lbl_pbc_cancel">PBC Cancel</string>
    <string name="scr_lbl_id">ID</string>
    <string name="scr_lbl_void">Void</string>
    <string name="scr_lbl_scans">Scans</string>
    <string name="scr_lbl_site">Site</string>
    <string name="scr_lbl_timing">Timing</string>
    <string name="scr_lbl_shift">Shift</string>
    <string name="scr_lbl_continuous_scan_mode">Continuous Scan Mode</string>
    <string name="scr_lbl_rpp">RPP</string>
    <string name="scr_lbl_meter_continuous">Meter</string>
    <string name="scr_lbl_all">All</string>
</resources>