<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_layout"
    android:background="@color/bg_semi_white"
    android:orientation="vertical">

    <include layout="@layout/dashboard_header" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/scr_lbl_continuous_scan_mode"
            android:textAlignment="center"
            android:textColor="@color/black_heading"
            android:textSize="@dimen/_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2dp"
            android:layout_marginHorizontal="@dimen/_4dp"
            android:background="@drawable/gradientline" />


        <include layout="@layout/content_continuous_items_row" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_rpp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/scr_lbl_rpp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/scr_lbl_time" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/scr_lbl_meter_continuous" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/scr_lbl_all" />

            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lay_button_submit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/_16dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="@style/Button_shape_blue"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:onClick="onClick"
            android:padding="@dimen/_10dp"
            android:text="@string/scr_lbl_start_enforcement"
            android:textAllCaps="false" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>