<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layActivityLog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_layout"
    android:background="@color/bg_semi_white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/_26dp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/scr_lbl_voilation_details"
        android:textColor="@color/black_heading"
        android:textSize="@dimen/_20sp"
        android:accessibilityHeading="true"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/round_corner_shape_without_fill_gray_padding"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:text="@string/scr_lbl_voilation_type"
                android:textColor="@color/black_heading"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="left"
                android:fontFamily="@font/sf_pro_text_semibold"
                android:text="@string/scr_lbl_count"
                android:textColor="@color/black_heading"
                android:textSize="17sp" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tvViolation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_recycler_violation" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/_26dp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/scr_lbl_route_details"
        android:textColor="@color/black_heading"
        android:textSize="@dimen/_20sp"
        android:accessibilityHeading="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:elevation="10dp"
        android:gravity="center"
        app:cardCornerRadius="@dimen/_15dp">

        <FrameLayout
            android:id="@+id/map_framecontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="240dp" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/_26dp"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:text="@string/scr_lbl_activity_log"
        android:textColor="@color/black_heading"
        android:textSize="@dimen/_20sp"
        android:accessibilityHeading="true"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/round_corner_shape_without_fill_gray_padding"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/_16dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text=""
            android:textColor="@color/black_heading"
            android:textSize="17sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_recycler_activity" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
